--- a/Brewfile.tmpl
+++ b/Brewfile.tmpl
@@ -1,10 +1,10 @@
 tap "homebrew/bundle"
 tap "homebrew/cask-versions"
+
 brew "masp"
 brew "chezmoi"
 brew "gh"
 brew "git"
-cask "iterm2"
 brew "htop"
 brew "jq"
 brew "libpq"
@@ -14,6 +14,26 @@ brew "telnet"
 brew "tfenv"
 brew "wget"
 brew "yarn"
+brew "docker"
+
+# Dev
+cask "pycharm"
+cask "visual-studio-code"
+cask "iterm2"
+cask "alfred"
+cask "google-chrome"
+cask "slack"
+cask "sublime-text"
+cask "skype"
+cask "kdiff3"
+
+# Other
+cask "spotify"
+cask "zoom"
+cask "backblaze"
+cask "setapp"
+cask "google-drive"
+
 
 
 # Additional apps
