--- a/Brewfile.tmpl
+++ b/Brewfile.tmpl
@@ -17,6 +17,7 @@ brew "yarn"
 brew "docker"
 
 # Dev
+cask "miniconda"
 cask "pycharm"
 cask "visual-studio-code"
 cask "iterm2"
@@ -37,9 +38,13 @@ cask "google-drive"
 
 
 # Additional apps
-mas '1Password', id: 1333542190
-mas 'WhatsApp Desktop', id: 1147396723
-mas 'Telegram', id: 747648890
+#mas '1Password', id: 1333542190
+#mas 'WhatsApp Desktop', id: 1147396723
+#mas 'Telegram', id: 747648890
+#mas 'HP Smart for Desktop', id: 1474276998
+#mas 'Todoist: To do list e tarefas', id: 585829637
+#mas 'Okta Verify', id: 490179405
+#mas 'Xcode', id: 497799835
 
 vscode "erd0s.terraform-autocomplete"
 vscode "hashicorp.terraform"
