Add iterm2 profiles

--- a/run_onchange_after_00_brew_packages_installation.sh.tmpl
+++ b/run_onchange_after_00_brew_packages_installation.sh.tmpl
@@ -1,6 +1,8 @@
 {{- if (eq .chezmoi.os "darwin") -}}
 #!/bin/bash
 
+# Brewfile hash: {{ include "Brewfile" | sha256sum }}
+
 set -eufo pipefail
 
 brew update
