--- a/run_onchange_after_00_brew_packages_installation.sh.tmpl
+++ b/run_onchange_after_00_brew_packages_installation.sh.tmpl
@@ -1,7 +1,7 @@
 {{- if (eq .chezmoi.os "darwin") -}}
 #!/bin/bash
 
-# Brewfile hash: {{ include "Brewfile" | sha256sum }}
+# Brewfile hash: {{ include "Brewfile.tmpl" | sha256sum }}
 
 set -eufo pipefail
 
