--- a/run_onchange_after_10_iterm2.sh.tmpl
+++ b/run_onchange_after_10_iterm2.sh.tmpl
@@ -5,6 +5,6 @@
 
 set -eufo pipefail
 
-defaults import com.googlecode.iterm2 iterm2/iterm.plist
+defaults import com.googlecode.iterm2 iterm2/iterm2.plist
 
 {{ end }}
