--- a/run_onchange_after_10_iterm2.sh.tmpl
+++ b/run_onchange_after_10_iterm2.sh.tmpl
@@ -1,6 +1,12 @@
 {{- if (eq .chezmoi.os "darwin") -}}
 #!/bin/bash
 
+######################################################################
+# To export current iterm2 setup and profile definitions
+# Run `defaults export com.googlecode.iterm2 ./iterm2/iterm2.plist
+# Then commit the new file definitions to the file
+######################################################################
+
 # iterm2 hash: {{ include "iterm2/iterm2.plist" | sha256sum }}
 
 set -eufo pipefail
