Add plugin to brew

--- a/Brewfile.tmpl
+++ b/Brewfile.tmpl
@@ -3,6 +3,7 @@ tap "homebrew/cask-versions"
 
 brew "mas"
 brew "chezmoi"
+brew "powerlevel10k"
 brew "gh"
 brew "git"
 brew "htop"
@@ -34,7 +35,7 @@ cask "zoom"
 cask "backblaze"
 cask "setapp"
 cask "google-drive"
-
+cask "microsoft-office"
 
 
 # Additional apps
