Move config files

--- a/run_onchange_after_10_iterm2.sh.tmpl
+++ b/run_onchange_after_10_iterm2.sh.tmpl
@@ -7,10 +7,10 @@
 # Then commit the new file definitions to the file
 ######################################################################
 
-# iterm2 hash: {{ include "iterm2/iterm2.plist" | sha256sum }}
+# iterm2 hash: {{ include ".config/iterm2/iterm2.plist" | sha256sum }}
 
 set -eufo pipefail
 
-defaults import com.googlecode.iterm2 iterm2/iterm2.plist
+defaults import com.googlecode.iterm2 $HOME/.config/iterm2/iterm2.plist
 
 {{ end }}
