--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -31,11 +31,13 @@ cask "kdiff3"
 
 # Other
 cask "spotify"
-cask "zoom"
 cask "backblaze"
 cask "setapp"
 cask "google-drive"
+
+# Requires password in prompt
 cask "microsoft-office"
+cask "zoom"
 
 
 # Additional apps
@@ -51,15 +53,3 @@ vscode "erd0s.terraform-autocomplete"
 vscode "hashicorp.terraform"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
-vscode "ms-toolsai.jupyter"
-vscode "ms-toolsai.jupyter-keymap"
-vscode "ms-toolsai.jupyter-renderers"
-vscode "ms-toolsai.vscode-jupyter-cell-tags"
-vscode "ms-toolsai.vscode-jupyter-slideshow"
-vscode "ms-vscode-remote.remote-containers"
-vscode "ms-vscode-remote.remote-ssh"
-vscode "ms-vscode-remote.remote-ssh-edit"
-vscode "ms-vscode-remote.remote-wsl"
-vscode "ms-vscode-remote.vscode-remote-extensionpack"
-vscode "ms-vscode.remote-explorer"
-vscode "ms-vscode.remote-server"
