Fix brew install

--- a/.chezmoiscripts/run_onchange_after_00-install-brew-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_00-install-brew-packages.sh.tmpl
@@ -8,7 +8,7 @@ set -eufo pipefail
 brew update
 
 brew tap Homebrew/bundle
-brew bundle -f {{ .chezmoi.homeDir }}/.config/homebrew/Brewfile
+brew bundle --file {{ .chezmoi.homeDir }}/.config/homebrew/Brewfile
 
 brew cleanup
 {{ end }}
