--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -37,14 +37,14 @@ cask "setapp"
 cask "google-drive"
 
 # Requires password in prompt
-{{- if (!eq .mode "test") }}
+{{- if (ne .mode "test") }}
 cask "microsoft-office"
 cask "zoom"
 {{ end }}
 
 
 # Additional apps
-{{- if (!eq .mode "test") }}
+{{- if (ne .mode "test") }}
 mas '1Password', id: 1333542190
 mas 'WhatsApp Desktop', id: 1147396723
 mas 'Telegram', id: 747648890
