--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -49,7 +49,7 @@ mas '1Password', id: 1333542190
 mas 'WhatsApp Desktop', id: 1147396723
 mas 'Telegram', id: 747648890
 mas 'HP Smart for Desktop', id: 1474276998
-as 'Todoist: To do list e tarefas', id: 585829637
+mas 'Todoist: To do list e tarefas', id: 585829637
 mas 'Okta Verify', id: 490179405
 mas 'Xcode', id: 497799835
 {{ end }}
