Change docker installation to cask

--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -15,12 +15,12 @@ brew "telnet"
 brew "tfenv"
 brew "wget"
 brew "yarn"
-brew "docker"
 brew "awscli"
 
 # Dev
 cask "miniconda"
 cask "pycharm"
+cask "docker"
 cask "visual-studio-code"
 cask "iterm2"
 cask "alfred"
