Add helm, postman and eksctl to homebrew

--- a/dot_config/homebrew/Brewfile.tmpl
+++ b/dot_config/homebrew/Brewfile.tmpl
@@ -18,6 +18,8 @@ brew "wget"
 brew "watch"
 brew "yarn"
 brew "awscli"
+brew "eksctl"
+brew "helm"
 
 # Dev
 cask "miniconda"
@@ -30,6 +32,7 @@ cask "slack"
 cask "sublime-text"
 cask "skype"
 cask "kdiff3"
+cask "postman"
 
 # Other
 cask "spotify"
