--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -118,10 +118,23 @@ export PYTHONDONTWRITEBYTECODE=1
 export PATH=$PATH:/Applications/PyCharm.app/Contents/MacOS
 export DOCKER_BUILDKIT=0
 export DOCKER_HOST=ssh://msantino@camarao
-export MYSQLCLIENT_LDFLAGS=$(pkg-config --libs mysqlclient)
-export MYSQLCLIENT_CFLAGS=$(pkg-config --cflags mysqlclient)
 
 # Mysql client
 export PATH="/opt/homebrew/opt/mysql-client/bin:$PATH"
 export MYSQLCLIENT_CFLAGS="-L/opt/homebrew/opt/mysql-client/lib"
 export MYSQLCLIENT_LDFLAGS="-I/opt/homebrew/opt/mysql-client/include"
+# >>> conda initialize >>>
+# !! Contents within this block are managed by 'conda init' !!
+__conda_setup="$('/opt/homebrew/Caskroom/miniconda/base/bin/conda' 'shell.zsh' 'hook' 2> /dev/null)"
+if [ $? -eq 0 ]; then
+    eval "$__conda_setup"
+else
+    if [ -f "/opt/homebrew/Caskroom/miniconda/base/etc/profile.d/conda.sh" ]; then
+        . "/opt/homebrew/Caskroom/miniconda/base/etc/profile.d/conda.sh"
+    else
+        export PATH="/opt/homebrew/Caskroom/miniconda/base/bin:$PATH"
+    fi
+fi
+unset __conda_setup
+# <<< conda initialize <<<
+
