--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -77,7 +77,7 @@ DISABLE_AUTO_UPDATE="true"
 # Custom plugins may be added to $ZSH_CUSTOM/plugins/
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
-plugins=(git aws)
+plugins=(git aws common-aliases docker dotenv terraform)
 
 source $ZSH/oh-my-zsh.sh
 
